src/test/deca/syntax/valid/plus_moins.deca
// Description:
//    on ajoute à x un entier négatif
//
// Resultats:
//   ok


{ int x;
  x +-3;}
